<resources>
    <string name="app_name">Minigame Alarm Clock</string>
    <string name="statistics">Statistics</string>
    <string name="alarms">Alarms</string>
    <string name="alarm_name">Alarm name</string>
    <string name="mini_game">Mini Game</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="vibration">Vibration</string>
    <string name="extra_loud">Extra Loud</string>
    <string name="max_volume">Max Volume</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="arg_alarm_obj">AlarmObject</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="bundle_alarm_obj">BundleAlarmObject</string>
    <string name="_15">15</string>
    <string name="y2">Y2</string>
    <string name="g">G</string>
    <string name="r">R</string>
    <string name="o1">O1</string>
    <string name="y1">Y1</string>
    <string name="b">B</string>
    <string name="p">P</string>
    <string name="o2">O2</string>
    <string name="bomb_defusal">Bomb Defusal</string>
    <string name="start_minigame">Start Minigame</string>
    <string name="once_off">Once Off</string>
</resources>