<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAlarm">

    <EditText
        android:id="@+id/create_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/alarm_name"
        android:inputType="text"
        android:textColor="@color/editTextColor"
        android:backgroundTint="@color/editTextLine"
        android:textColorHint="@color/editTextColor" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"/>

    <LinearLayout
        android:id="@+id/dayOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkSun"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sun" />

        <CheckBox
            android:id="@+id/checkMon"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/mon" />

        <CheckBox
            android:id="@+id/checkTue"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/tue" />

        <CheckBox
            android:id="@+id/checkWed"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/wed" />

        <CheckBox
            android:id="@+id/checkThu"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/thu" />

        <CheckBox
            android:id="@+id/checkFri"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/fri" />

        <CheckBox
            android:id="@+id/checkSat"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/sat" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/cardMinigame"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/dayOptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/minigame">

            <TextView
                android:id="@+id/minigameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mini_game"
                android:textSize="21sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/setMinigameName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mini_game"
                android:textSize="13sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minigameText"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/cardAlarmSound"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/cardMinigame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/alarmSound">

            <TextView
                android:id="@+id/alarmSoundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_sound"
                android:textSize="21sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/setAlarmSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_sound"
                android:textSize="13sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarmSoundText"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/cardVibration"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/cardAlarmSound"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/vibration">

            <TextView
                android:id="@+id/vibrationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration"
                android:textSize="21sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Switch
                android:id="@+id/vibrationSwitch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/cardExtraLoud"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@+id/cardVibration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/extraLoud">

            <TextView
                android:id="@+id/extraLoudText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_loud"
                android:textSize="21sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/maxVolumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_volume"
                android:textSize="13sp"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/extraLoudText"/>

            <Switch
                android:id="@+id/extraLoudSwitch"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/createAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/create_alarm" />

</LinearLayout>