<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/bomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bomb" />

    <ImageView
        android:id="@+id/wire1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bomb"
        app:srcCompat="@drawable/wire1" />

    <ImageView
        android:id="@+id/wire2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        app:srcCompat="@drawable/wire2" />

    <ImageView
        android:id="@+id/wire3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        app:srcCompat="@drawable/wire3" />

    <ImageView
        android:id="@+id/wire4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        app:srcCompat="@drawable/wire4" />

    <ImageView
        android:id="@+id/wire5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="124dp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wire5" />

    <ImageView
        android:id="@+id/wire6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wire6" />

    <ImageView
        android:id="@+id/wire7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wire7" />

    <ImageView
        android:id="@+id/wire8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="122dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wire8" />

    <ImageView
        android:id="@+id/greendot3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="117dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/bomb"
        app:layout_constraintTop_toTopOf="@+id/bomb"
        app:srcCompat="@drawable/greendot" />

    <ImageView
        android:id="@+id/greendot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="142dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/greendot3"
        app:srcCompat="@drawable/greendot" />

    <ImageView
        android:id="@+id/greendot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="143dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/greendot2"
        app:srcCompat="@drawable/greendot" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="46dp"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/bomb"
        app:layout_constraintTop_toTopOf="@+id/bomb" />

    <TextView
        android:id="@+id/wiresToCutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="66dp"
        android:text="@string/y2"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toTopOf="@+id/bomb" />

    <Button
        android:id="@+id/RButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/r"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/O1Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/GButton"
        app:layout_constraintTop_toBottomOf="@+id/bomb" />

    <Button
        android:id="@+id/Y2Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/y2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/O2Button"
        app:layout_constraintTop_toBottomOf="@+id/Y1Button" />

    <Button
        android:id="@+id/O2Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/o2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Y2Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PButton"
        app:layout_constraintTop_toBottomOf="@+id/O1Button" />

    <Button
        android:id="@+id/GButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/g"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/RButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bomb" />

    <Button
        android:id="@+id/Y1Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/y1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/O1Button"
        app:layout_constraintTop_toBottomOf="@+id/bomb" />

    <Button
        android:id="@+id/BButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/b"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/PButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GButton" />

    <Button
        android:id="@+id/O1Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/o1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/Y1Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/RButton"
        app:layout_constraintTop_toBottomOf="@+id/bomb" />

    <Button
        android:id="@+id/PButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/p"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/O2Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/BButton"
        app:layout_constraintTop_toBottomOf="@+id/RButton" />

    <ImageView
        android:id="@+id/wirecut1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="116dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bomb"
        app:srcCompat="@drawable/wirecut1" />

    <ImageView
        android:id="@+id/wirecut2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="116dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        app:srcCompat="@drawable/wirecut2" />

    <ImageView
        android:id="@+id/wirecut3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        android:visibility="invisible"
        app:srcCompat="@drawable/wirecut3" />

    <ImageView
        android:id="@+id/wirecut4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="120dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire1"
        app:srcCompat="@drawable/wirecut4" />

    <ImageView
        android:id="@+id/wirecut5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="124dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wirecut5" />

    <ImageView
        android:id="@+id/wirecut6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="120dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wirecut6" />

    <ImageView
        android:id="@+id/wirecut7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="120dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/bomb"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wirecut7" />

    <ImageView
        android:id="@+id/wirecut8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="122dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wire4"
        app:srcCompat="@drawable/wirecut8" />

</androidx.constraintlayout.widget.ConstraintLayout>